<resources>
    <string name="app_name">Music App</string>
    <!-- Category name for hip hop playlist[CHAR LIMIT=20] -->
    <string name="category_hip_hop">Hip Hop</string>

    <!-- Category name for pop playlist[CHAR LIMIT=20] -->
    <string name="category_pop">Pop</string>

    <!-- Category name for alternative rock playlist[CHAR LIMIT=20] -->
    <string name="category_alternative_rock">Alternative Rock</string>
    <string name="artist_name">artistName</string>
    <string name="song_name">artistSong</string>

    <string name="play_icon">Play Icon</string>

</resources>